<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/appTitleLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#242323"
            android:text="@string/appTitle"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/appSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/typeYourSalary" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/salaryTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/hintTextField"
                android:inputType="number|numberDecimal" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whichPercentual"
            android:textColor="@color/white" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb40percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb40Percent"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb45percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rb45Percent"
                android:textColor="@color/white" />

            <RadioButton
                android:id="@+id/rb50percent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb50Percent"
                android:textColor="@color/white" />
        </RadioGroup>

        <Button
            android:id="@+id/resultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Mostrar novo salário"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/resultText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>